--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /neural_ODE/data/validation/
 /neural_ODE/mini_data/
 /structure_module/openfold/resources/
+/save_intermediates/openfold/resources/
