--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /neural_ODE/mini_data/
 /structure_module/openfold/resources/
 /save_intermediates/openfold/resources/
+/neural_ODE/old versions/
+/old_scripts/
